# serene

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  .woodpecker.yml  CMakeLists.txt  README.md  README.org  activate  builder  config  dev.org  mkdocs.yml
.woodpecker/: build.yml  docs.yml  lint.yml  notify.yml
cmake/: tablegen-serene.cmake
cmake/caches/: debug.cmake  llvm.cmake  release.cmake  runtimes.0.cmake  serene_dev.cmake  stage0.cmake
cmake/toolchains/: linux.cmake  stage1.cmake  stage1.standalone.cmake  stage2.cmake  stage2.standalone.cmake  x86_64-linux-musl.cmake
core/: CMakeLists.txt
core/include/serene/core/: core.h
core/lib/serene/: CMakeLists.txt  compiler.cpp.inc  core.cpp  reader.cpp.inc
devtools/: CMakeLists.txt  slir-lsp-server.cpp  slir-opt.cpp
docs/: CMakeLists.txt  Dockerfile  conf.py  index.md  requirements.txt  resources.md  service.yml
docs/pages/: getting_started.md  resources.md
docs/pages/stylesheets/: extra.css
docs/stylesheets/: extra.css
libserene/: CMakeLists.txt
libserene.v0/: CMakeLists.txt
libserene.v0/include/serene/: context.h  conventions.h  diagnostics.h  environment.h  errors.h  namespace.h  passes.h  semantics.h  serene.h  source_mgr.h  traits.h  utils.h
libserene.v0/include/serene/errors/: base.h  variant.h
libserene.v0/include/serene/exprs/: call.h  def.h  expression.h  fn.h  list.h  number.h  symbol.h  traits.h
libserene.v0/include/serene/jit/: engine.h  halley.h  layers.h
libserene.v0/include/serene/llvm/: patches.h
libserene.v0/include/serene/passes/: passes.td
libserene.v0/include/serene/reader/: location.h  reader.h  traits.h
libserene.v0/include/serene/slir/: dialect.h  dialect.td  generatable.h  ops.h  ops.td  slir.h  symbol.h  traits.h  type_converter.h  types.h  types.td  utils.h
libserene.v0/include/serene/traits/: locatable.h
libserene.v0/include/serene/types/: type.h
libserene.v0/lib/: CMakeLists.txt  context.cpp  diagnostics.cpp  errors.cpp  namespace.cpp  semantics.cpp  serene.cpp  source_mgr.cpp
libserene.v0/lib/exprs/: call.cpp  def.cpp  expression.cpp  fn.cpp  list.cpp  number.cpp  symbol.cpp
libserene.v0/lib/jit/: engine.cpp  halley.cpp  layers.cpp
libserene.v0/lib/passes/: slir_lowering.cpp  to_llvm_dialect.cpp
libserene.v0/lib/reader/: reader.cpp
libserene.v0/lib/slir/: dialect.cpp  generatable.cpp  ops.cpp  slir.cpp  type_converter.cpp  types.cpp  utils.cpp  value_op.cpp
libserene.v0/tests/: context_tests.cpp.inc  environment_tests.cpp.inc  namespace_tests.cpp.inc  serenetests.cpp  setup.cpp.inc  test_helpers.cpp.inc  traits_tests.cpp.inc  utils_tests.cpp.inc
libserene.v0/tests/errors/: error_tests.cpp.inc
libserene.v0/tests/exprs/: expression_tests.cpp.inc  list_tests.cpp.inc  number_tests.cpp.inc  symbol_tests.cpp.inc
libserene.v0/tests/reader/: reader_tests.cpp.inc
libserene/cmake/: SereneConfig.cmake.in
libserene/include/serene/: context.h  fs.h  options.h  serene.h
libserene/include/serene/jit/: halley.h  packer.h
libserene/include/serene/types/: types.h
libserene/lib/: CMakeLists.txt  context.cpp  fs.cpp  serene.cpp
libserene/lib/jit/: halley.cpp  packer.cpp
resources/docker/toolchain/stage0/: Dockerfile  Sysroot
resources/emacs/: serene-dev.el
scripts/: containers.sh  deps.sh  devfs.sh  devfs_container_setup.sh  include-fixer.py  toolchain.sh  utils.sh
scripts/templates/: ld.musl-lld  musl-clang
serene/: CMakeLists.txt
serene-repl/: CMakeLists.txt  serene-repl.cpp
serene-tblgen/: CMakeLists.txt  main.cpp
serene-tblgen/serene/: errors-backend.cpp  errors-backend.h
serene/include/serene/: config.h.in
serene/src/: CMakeLists.txt  _errors.h  ast.cpp  ast.h  context.cpp  context.h  errors.cpp  errors.h  location.h  namespace.h  options.h  reader.cpp  reader.h  serene.cpp  source_mgr.cpp  source_mgr.h
serene/src/commands/: commands.cpp
serene/src/jit/: jit.cpp  jit.h
serenec/: CMakeLists.txt  serenec.cpp
